--- a/GestaoDeTarefas/src/main/resources/application.properties
+++ b/GestaoDeTarefas/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=GestaoDeTarefas
+spring.datasource.url=jdbc:mysql://localhost:3306/gestor
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Outras configurações
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
